prover-ray/zkcdriver/testdata/synced/invalid/fixed_array_11.zkc
//error:3:12-16:unknown type alias
 fn main() -> () {
    var r:[my_t;2]
    r[0] = 1
 }